--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -3,12 +3,13 @@
     background-color: #d3dde0 ;
     border: 1px solid black;
     padding: 50px 25px 50px 25px;
+    margin: 0%;
     font-family:'Inter', sans-serif ;
 
 }
-.contactoform{
-    justify-content: center;
-    text-align: justify;
+#formulario{
+    padding: 20px;
+    
     font-family:'Inter', sans-serif ;
-
 }
+
