--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -4,6 +4,11 @@
 }
 
 @media screen and (max-width:576px){
+    .texto{
+        max-width: 100%;
+        margin: 0%;
+        text-align: center;
+    }
     .parrafocentrado{
         margin-left: 0%;
         margin-right: 0%;
@@ -22,5 +27,46 @@
     .cocina-item:nth-child(5){
         grid-row-start: 2;
     }
-  
+    .vanitory-container{
+        display: grid;
+        grid-template-columns:repeat(1, 1fr) ;
+        grid-auto-rows:200px ;
+        padding: 10px;
+        grid-gap: 5px;
+    }
+    .vanitory-item:nth-child(1){
+       grid-row-start: 1;
+
+    }
+    .vanitory-item:nth-child(5){
+        grid-row-start: 2;
+    }
+    .placard-container{
+        display: grid;
+        grid-template-columns:repeat(1, 1fr) ;
+        grid-auto-rows:200px ;
+        padding: 10px;
+        grid-gap: 5px;
+    }
+    .placard-item:nth-child(1){
+       grid-row-start: 1;
+
+    }
+    .placard-item:nth-child(5){
+        grid-row-start: 2;
+    }
+    .decks-container{
+        display: grid;
+        grid-template-columns:repeat(1, 1fr) ;
+        grid-auto-rows:200px ;
+        padding: 10px;
+        grid-gap: 5px;
+    }
+    .decks-item:nth-child(1){
+       grid-row-start: 1;
+
+    }
+    .decks-item:nth-child(5){
+        grid-row-start: 2;
+    }
 }
