--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,5 +1,5 @@
 .centroproductos{
-    margin-top: 50px;
+    margin-top:0%;
     margin-bottom: 50px;
     padding: 20px 20px 20px 20px;
 }
@@ -8,4 +8,8 @@
     color: black;
     font-family:'Inter', sans-serif ;
 
+}
+.textoproductos{
+    display: flex;
+    justify-content: center;
 }
