--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,6 +1,6 @@
 #contactocuerpo{
     max-width: 100%;
-    background-color: #d3dde0 ;
+    background-color: #D8D8D8 ;
     border: 1px solid black;
     padding: 50px 25px 50px 25px;
     margin: 0%;
@@ -9,7 +9,7 @@
 }
 #formulario{
     padding: 20px;
-    
+    background-color: #F5EFE6;
     font-family:'Inter', sans-serif ;
 }
 
