--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,7 +29,7 @@ body {
 
 #piepagina {
   max-width: 100%;
-  background-color: #d3dde0;
+  background-color: #D8D8D8;
 }
 
 * {
@@ -44,15 +44,17 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 100px;
+  margin-top: 0%;
+  margin-bottom: 50px;
   font-family: "Inter", sans-serif;
   background-color: aliceblue;
 }
 .padre .texto {
   display: flex;
+  max-width: 100%;
+  text-align: center;
   justify-content: center;
-  background-color: antiquewhite;
+  background-color: #D8D8D8;
   font-family: "Inter", sans-serif;
 }
 .padre .parrafocentrado {
@@ -67,7 +69,7 @@ body {
 .migajas {
   display: flex;
   justify-content: center;
-  background-color: antiquewhite;
+  background-color: #D8D8D8;
   margin: 0%;
 }
 
@@ -82,7 +84,7 @@ ol {
 
 #contactocuerpo {
   max-width: 100%;
-  background-color: #d3dde0;
+  background-color: #D8D8D8;
   border: 1px solid black;
   padding: 50px 25px 50px 25px;
   margin: 0%;
@@ -91,22 +93,22 @@ ol {
 
 #formulario {
   padding: 20px;
+  background-color: #F5EFE6;
   font-family: "Inter", sans-serif;
 }
 
 .centroproductos {
   margin-top: 0%;
   margin-bottom: 50px;
-  padding: 20px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
-
-.linkproductos {
+.centroproductos .linkproductos {
   text-decoration: none;
   color: black;
   font-family: "Inter", sans-serif;
 }
-
-.textoproductos {
+.centroproductos .textoproductos {
+  margin-top: 0%;
   display: flex;
   justify-content: center;
 }
@@ -114,15 +116,13 @@ ol {
 .centrococina {
   margin: 0%;
 }
-
-.titulococina {
+.centrococina .titulococina {
   text-align: center;
   font-family: "Inter", sans-serif;
   background-color: antiquewhite;
   margin: 0%;
 }
-
-.cocina-container {
+.centrococina .cocina-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 150px;
@@ -130,26 +130,21 @@ ol {
   grid-gap: 10px;
   font-family: "Inter", sans-serif;
 }
-
-.cocina-img {
+.centrococina .cocina-container .cocina-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-.cocina-item {
+.centrococina .cocina-container .cocina-item {
   position: relative;
 }
-
-.cocina-item:nth-child(1) {
+.centrococina .cocina-container .cocina-item:nth-child(1) {
   grid-row-start: span 2;
 }
-
-.cocina-item:nth-child(5) {
+.centrococina .cocina-container .cocina-item:nth-child(5) {
   grid-row-start: span 2;
 }
-
-.cocina-title {
+.centrococina .cocina-container .cocina-title {
   position: absolute;
   bottom: 0;
   color: white;
@@ -162,15 +157,13 @@ ol {
 .centrodecks {
   margin: 0%;
 }
-
-.titulodecks {
+.centrodecks .titulodecks {
   text-align: center;
   font-family: "Inter", sans-serif;
   background-color: antiquewhite;
   margin: 0%;
 }
-
-.decks-container {
+.centrodecks .decks-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 150px;
@@ -178,26 +171,21 @@ ol {
   grid-gap: 10px;
   font-family: "Inter", sans-serif;
 }
-
-.decks-img {
+.centrodecks .decks-container .decks-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-.decks-item {
+.centrodecks .decks-container .decks-item {
   position: relative;
 }
-
-.decks-item:nth-child(1) {
+.centrodecks .decks-container .decks-item:nth-child(1) {
   grid-row-start: span 2;
 }
-
-.decks-item:nth-child(5) {
+.centrodecks .decks-container .decks-item:nth-child(5) {
   grid-row-start: span 2;
 }
-
-.decks-title {
+.centrodecks .decks-container .decks-title {
   position: absolute;
   bottom: 0;
   color: white;
@@ -210,15 +198,13 @@ ol {
 .centroplacard {
   margin: 0;
 }
-
-.tituloplacard {
+.centroplacard .tituloplacard {
   text-align: center;
   font-family: "Inter", sans-serif;
   background-color: antiquewhite;
   margin: 0%;
 }
-
-.placard-container {
+.centroplacard .placard-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 150px;
@@ -226,26 +212,21 @@ ol {
   grid-gap: 10px;
   font-family: "Inter", sans-serif;
 }
-
-.placard-img {
+.centroplacard .placard-container .placard-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-.placard-item {
+.centroplacard .placard-container .placard-item {
   position: relative;
 }
-
-.placard-item:nth-child(1) {
+.centroplacard .placard-container .placard-item:nth-child(1) {
   grid-row-start: span 2;
 }
-
-.placard-item:nth-child(5) {
+.centroplacard .placard-container .placard-item:nth-child(5) {
   grid-row-start: span 2;
 }
-
-.placard-title {
+.centroplacard .placard-container .placard-title {
   position: absolute;
   bottom: 0;
   color: white;
@@ -258,15 +239,13 @@ ol {
 .centrovanitory {
   margin: 0%;
 }
-
-.titulovanitory {
+.centrovanitory .titulovanitory {
   text-align: center;
   font-family: "Inter", sans-serif;
   background-color: antiquewhite;
   margin: 0%;
 }
-
-.vanitory-container {
+.centrovanitory .vanitory-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 150px;
@@ -274,26 +253,21 @@ ol {
   grid-gap: 10px;
   font-family: "Inter", sans-serif;
 }
-
-.vanitory-img {
+.centrovanitory .vanitory-container .vanitory-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-.vanitory-item {
+.centrovanitory .vanitory-container .vanitory-item {
   position: relative;
 }
-
-.vanitory-item:nth-child(1) {
+.centrovanitory .vanitory-container .vanitory-item:nth-child(1) {
   grid-row-start: span 2;
 }
-
-.vanitory-item:nth-child(5) {
+.centrovanitory .vanitory-container .vanitory-item:nth-child(5) {
   grid-row-start: span 2;
 }
-
-.vanitory-title {
+.centrovanitory .vanitory-container .vanitory-title {
   position: absolute;
   bottom: 0;
   color: white;
