--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,15 +1,16 @@
 .centroproductos{
     margin-top:0%;
     margin-bottom: 50px;
-    padding: 20px 20px 20px 20px;
-}
-.linkproductos{
-    text-decoration: none;
-    color: black;
-    font-family:'Inter', sans-serif ;
-
-}
-.textoproductos{
-    display: flex;
-    justify-content: center;
+    padding: 0px 20px 20px 20px;
+    .linkproductos{
+        text-decoration: none;
+        color: black;
+        font-family:'Inter', sans-serif ;
+    
+    }
+    .textoproductos{
+        margin-top: 0%;
+        display: flex;
+        justify-content: center;
+    }
 }
