--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: rgb(184, 173, 164);
 }
@@ -30,6 +31,7 @@ body {
 #piepagina {
   max-width: 100%;
   background-color: #D8D8D8;
+  border-top: 1px solid rgb(175, 175, 175);
 }
 
 * {
@@ -45,13 +47,11 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 0%;
-  margin-bottom: 50px;
   font-family: "Inter", sans-serif;
   background-color: aliceblue;
 }
 .padre .texto {
   display: flex;
-  max-width: 100%;
   text-align: center;
   justify-content: center;
   background-color: #D8D8D8;
@@ -71,15 +71,42 @@ body {
   justify-content: center;
   background-color: #D8D8D8;
   margin: 0%;
+  font-family: "Inter", sans-serif;
 }
 
 ol {
   margin: 0%;
+  font-family: "Inter", sans-serif;
 }
 
 .link {
   text-decoration: none;
   color: black;
+  font-family: "Inter", sans-serif;
+}
+
+.index {
+  padding: 25px;
+  background-color: #D8D8D8;
+  font-family: "Inter", sans-serif;
+}
+
+.servicios {
+  max-width: 100%;
+  height: auto;
+  align-items: center;
+  padding: 25px;
+  font-family: "Inter", sans-serif;
+}
+.servicios .servi {
+  text-align: center;
+  font-family: "Inter", sans-serif;
+}
+.servicios .caja {
+  max-width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter", sans-serif;
 }
 
 #contactocuerpo {
@@ -97,61 +124,136 @@ ol {
   font-family: "Inter", sans-serif;
 }
 
-.centroproductos {
-  margin-top: 0%;
-  margin-bottom: 50px;
-  padding: 0px 20px 20px 20px;
-}
-.centroproductos .linkproductos {
-  text-decoration: none;
-  color: black;
+.tituloproductos {
+  background-color: rgb(255, 236, 236);
   font-family: "Inter", sans-serif;
 }
-.centroproductos .textoproductos {
-  margin-top: 0%;
-  display: flex;
-  justify-content: center;
+
+.reforma {
+  text-decoration: none;
+  color: black;
+}
+.reforma :hover {
+  color: black;
+  text-decoration: none;
+}
+.reforma .texto {
+  font-family: "Inter", sans-serif;
+}
+.reforma .texto :hover {
+  background-color: black;
+}
+.reforma .texto btn {
+  text-decoration: none;
+}
+
+.placarddecks {
+  padding: 25px;
+  font-family: "Inter", sans-serif;
+}
+
+.casabaño {
+  max-width: 100%;
+  padding: 25px;
+}
+.casabaño .cuartobaño {
+  border: 2px solid rgb(255, 233, 233);
+}
+.casabaño .titulobaño {
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  color: black;
+}
+.casabaño .baño {
+  max-width: 100%;
+}
+
+.vinculobaño {
+  text-decoration: none;
+  color: black;
+}
+
+.vinculo {
+  text-decoration: none;
+  color: black;
 }
 
 .centrococina {
   margin: 0%;
 }
-.centrococina .titulococina {
+
+.titulococina {
   text-align: center;
   font-family: "Inter", sans-serif;
   background-color: antiquewhite;
   margin: 0%;
 }
-.centrococina .cocina-container {
+
+.galery-container {
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+  margin-top: 60px;
+  margin-bottom: 60px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 150px;
+  grid-auto-rows: 250px;
   padding: 20px;
   grid-gap: 10px;
-  font-family: "Inter", sans-serif;
 }
-.centrococina .cocina-container .cocina-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+.florida {
+  grid-column-start: span 2;
+  grid-row-start: span 2;
 }
-.centrococina .cocina-container .cocina-item {
+
+.floridados {
+  grid-row-end: span 2;
+}
+
+.floridatres {
+  grid-column-start: span 2;
+}
+
+.juan {
+  grid-column-start: span 2;
+  grid-row-start: span 2;
+}
+
+.heras {
+  grid-column-end: span 2;
+}
+
+.diaz {
+  grid-column-start: span 2;
+}
+
+.galery-item {
   position: relative;
 }
-.centrococina .cocina-container .cocina-item:nth-child(1) {
-  grid-row-start: span 2;
-}
-.centrococina .cocina-container .cocina-item:nth-child(5) {
-  grid-row-start: span 2;
-}
-.centrococina .cocina-container .cocina-title {
+
+.subtitulo {
   position: absolute;
   bottom: 0;
   color: white;
-  background: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0));
+  background: #333;
   width: 100%;
-  margin: 0;
-  padding: 10px;
+  margin: 0%;
+}
+
+.textococina {
+  justify-content: center;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  padding: 25px;
+  background-color: #D8D8D8;
+}
+
+.galery-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .centrodecks {
@@ -294,68 +396,77 @@ ol {
   background-repeat: no-repeat;
 }
 
+@media screen and (max-width: 768px) {
+  .caja {
+    padding: 0%;
+  }
+  .galery-container {
+    width: 95%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 200px;
+  }
+  .textococina {
+    padding: 10px;
+    font-size: x-small;
+  }
+  .florida {
+    grid-column-start: span 1;
+    grid-row-start: span 1;
+  }
+  .floridados {
+    grid-row-end: span 1;
+  }
+  .floridatres {
+    grid-column-start: span 1;
+  }
+  .juan {
+    grid-row-start: span 1;
+  }
+  .heras {
+    grid-column-end: span 1;
+  }
+  .diaz {
+    grid-column-start: span 1;
+  }
+}
 @media screen and (max-width: 576px) {
   .texto {
     max-width: 100%;
-    margin: 0%;
     text-align: center;
-  }
-  .parrafocentrado {
     margin-left: 0%;
     margin-right: 0%;
   }
-  .cocina-container {
-    display: grid;
+  .parrafocentrado {
+    margin-left: 0% !important;
+    margin-right: 0% !important;
+  }
+  .caja {
+    padding: 0%;
+  }
+  .galery-container {
+    width: 90%;
     grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 200px;
-    padding: 10px;
-    grid-gap: 5px;
   }
-  .cocina-item:nth-child(1) {
-    grid-row-start: 1;
+  .juan {
+    grid-column-start: span 1;
   }
-  .cocina-item:nth-child(5) {
-    grid-row-start: 2;
+}
+@media screen and (max-width: 480px) {
+  .texto {
+    margin-left: 0% !important;
+    margin-right: 0% !important;
   }
-  .vanitory-container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 200px;
-    padding: 10px;
-    grid-gap: 5px;
+  .parrafocentrado {
+    margin-left: 0% !important;
+    margin-right: 0% !important;
   }
-  .vanitory-item:nth-child(1) {
-    grid-row-start: 1;
-  }
-  .vanitory-item:nth-child(5) {
-    grid-row-start: 2;
-  }
-  .placard-container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 200px;
-    padding: 10px;
-    grid-gap: 5px;
-  }
-  .placard-item:nth-child(1) {
-    grid-row-start: 1;
-  }
-  .placard-item:nth-child(5) {
-    grid-row-start: 2;
-  }
-  .decks-container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 200px;
-    padding: 10px;
-    grid-gap: 5px;
-  }
-  .decks-item:nth-child(1) {
-    grid-row-start: 1;
-  }
-  .decks-item:nth-child(5) {
-    grid-row-start: 2;
-  }
+}
+.logito {
+  max-width: 100%;
+}
+
+#collapsibleNavbar {
+  background-color: rgb(214, 189, 189);
 }
 
 /*# sourceMappingURL=estilos.css.map */
