--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -1,72 +1,79 @@
 @media screen and (max-width:768px){
-
-   
+    .caja{
+        padding: 0%;
+    }
+    .galery-container{
+        width: 95%;
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: 200px;
+    }
+    .textococina{
+        padding: 10px;
+        font-size:x-small;
+    }
+    .florida{
+        grid-column-start: span 1;
+        grid-row-start: span 1;
+    }
+    .floridados{
+        grid-row-end: span 1;
+    }
+    .floridatres{
+        grid-column-start: span 1;
+    }
+    .juan{
+        grid-row-start: span 1;
+    }
+    .heras{
+        grid-column-end: span 1;
+    }
+    .diaz{
+        grid-column-start: span 1;
+    }
+    
+    
 }
 
 @media screen and (max-width:576px){
+
     .texto{
         max-width: 100%;
-        margin: 0%;
         text-align: center;
-    }
-    .parrafocentrado{
         margin-left: 0%;
         margin-right: 0%;
     }
-    .cocina-container{
-        display: grid;
-        grid-template-columns:repeat(1, 1fr) ;
-        grid-auto-rows:200px ;
-        padding: 10px;
-        grid-gap: 5px;
+    .parrafocentrado{
+        margin-left: 0% !important;
+        margin-right: 0% !important;
     }
-    .cocina-item:nth-child(1){
-       grid-row-start: 1;
-
+    .caja{
+        padding: 0%;
     }
-    .cocina-item:nth-child(5){
-        grid-row-start: 2;
+    .galery-container{
+        width: 90%;
+        grid-template-columns: repeat(1,1fr);
+        
     }
-    .vanitory-container{
-        display: grid;
-        grid-template-columns:repeat(1, 1fr) ;
-        grid-auto-rows:200px ;
-        padding: 10px;
-        grid-gap: 5px;
+    .juan{
+        grid-column-start: span 1;
+       
     }
-    .vanitory-item:nth-child(1){
-       grid-row-start: 1;
-
-    }
-    .vanitory-item:nth-child(5){
-        grid-row-start: 2;
-    }
-    .placard-container{
-        display: grid;
-        grid-template-columns:repeat(1, 1fr) ;
-        grid-auto-rows:200px ;
-        padding: 10px;
-        grid-gap: 5px;
-    }
-    .placard-item:nth-child(1){
-       grid-row-start: 1;
-
-    }
-    .placard-item:nth-child(5){
-        grid-row-start: 2;
-    }
-    .decks-container{
-        display: grid;
-        grid-template-columns:repeat(1, 1fr) ;
-        grid-auto-rows:200px ;
-        padding: 10px;
-        grid-gap: 5px;
-    }
-    .decks-item:nth-child(1){
-       grid-row-start: 1;
-
-    }
-    .decks-item:nth-child(5){
-        grid-row-start: 2;
-    }
+    
+    
 }
+
+@media screen and (max-width:480px){
+    .texto{
+        margin-left: 0% !important;
+        margin-right: 0%!important ;
+    }
+    .parrafocentrado{
+        margin-left:0% !important;
+        margin-right: 0% !important;
+        
+    }
+    
+    
+    
+}
+    
