--- a/scss/_cocina.scss
+++ b/scss/_cocina.scss
@@ -1,50 +1,77 @@
 .centrococina{
     margin: 0%;
-    .titulococina{
-        text-align: center;
-        font-family:'Inter', sans-serif ;
-        background-color: antiquewhite;
-        margin: 0%;
-    }
-    .cocina-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 150px;
-        padding: 20px;
-        grid-gap: 10px;
-        font-family: 'Inter', sans-serif;
+}
 
-        .cocina-img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            
-        }
-        
-        .cocina-item{
-            position: relative;
-        }
-        .cocina-item:nth-child(1){
-            grid-row-start:span 2;
-        
-        }
-        
-        
-        .cocina-item:nth-child(5) {
-            grid-row-start:span 2 ;
-        }
-        .cocina-title{
-            position: absolute;
-            bottom: 0;
-            color: white;
-            background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
-            width: 100%;
-            margin: 0;
-            padding:10px ;
-        
-        }
-    }
-    
+.titulococina{
+    text-align: center;
+    font-family:'Inter', sans-serif ;
+    background-color: antiquewhite;
+    margin: 0%;
+}
+
+
+
+
+.galery-container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    padding: 20px;
+    grid-gap: 10px;
+}
+.florida{
+    grid-column-start:span 2 ;
+    grid-row-start: span 2;
+}
+.floridados{
+    grid-row-end: span 2;
+}
+.floridatres{
+    grid-column-start: span 2;
+}
+.juan{
+    grid-column-start: span 2;
+    grid-row-start: span 2;
+}
+
+.heras{
+    grid-column-end: span 2;
+}
+.diaz{
+    grid-column-start: span 2;
+}
+
+
+.galery-item{
+    position: relative;
+}
+.subtitulo{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    background: #333;
+    width: 100%;
+    margin: 0%;
+}
+.textococina{
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    padding: 25px;
+    background-color: #D8D8D8;
+}
+.galery-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     
 }
+
+
+
 
