--- a/scss/_paginaprincipal.scss
+++ b/scss/_paginaprincipal.scss
@@ -10,12 +10,10 @@
     align-items: center;
     justify-content: center;
     margin-top:0% ;
-    margin-bottom: 50px;
     font-family: 'Inter', sans-serif;
     background-color: aliceblue;
     .texto{
         display: flex;
-        max-width: 100%;
         text-align: center;
         justify-content: center;
         background-color: #D8D8D8;
@@ -37,9 +35,11 @@
     justify-content: center;
     background-color:#D8D8D8 ;
     margin: 0%;
+    font-family: 'Inter', sans-serif;
 }
 ol{
     margin:0%;
+    font-family: 'Inter', sans-serif;
    
 }
 
@@ -49,4 +49,37 @@ ol{
 .link{
     text-decoration: none;
     color: black;
+    font-family: 'Inter', sans-serif;
+}
+
+
+
+
+
+
+.index{
+    
+    padding: 25px;
+    background-color:#D8D8D8;
+    font-family: 'Inter', sans-serif;
+    
+}
+.servicios{
+    max-width: 100%;
+    height: auto;
+    align-items: center;
+    padding: 25px;
+    font-family: 'Inter', sans-serif;
+    .servi{
+        text-align: center;
+        font-family: 'Inter', sans-serif;
+    }
+    .caja{
+        max-width: 100%;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Inter', sans-serif;
+        
+        
+    }
 }
