--- a/scss/_cocina.scss
+++ b/scss/_cocina.scss
@@ -54,7 +54,7 @@
     position: absolute;
     bottom: 0;
     color: white;
-    background: #333;
+    background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1));
     width: 100%;
     margin: 0%;
 }
@@ -69,6 +69,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    font-family: 'Inter', sans-serif;
     
 }
 
