--- a/scss/_decks.scss
+++ b/scss/_decks.scss
@@ -6,43 +6,62 @@
         background-color: antiquewhite;
         margin: 0%;
     }
-    .decks-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 150px;
-        padding: 20px;
-        grid-gap: 10px;
-        font-family: 'Inter', sans-serif;
-        .decks-img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            
-        }
-        
-        .decks-item{
-            position: relative;
-        }
-        .decks-item:nth-child(1){
-            grid-row-start:span 2;
-        
-        }
-        
-        
-        .decks-item:nth-child(5) {
-            grid-row-start:span 2 ;
-        }
-        .decks-title{
-            position: absolute;
-            bottom: 0;
-            color: white;
-            background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
-            width: 100%;
-            margin: 0;
-            padding:10decks
-        }
-    }
     
 }
+.decks-container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    padding: 20px;
+    grid-gap: 10px;
+    font-family: 'Inter', sans-serif;
+    }
+    .uno{
+        grid-column-start: span 3;
+    }
+    .tres{
+        grid-row-start: span 2;
+    }
+    .cinco{
+        grid-row-start: span 2;
+    }
+    .seis{
+        grid-row-end: span 2;
+    }
+    .ocho{
+        grid-column-start: span 3;
+    }
+
+
+
+
+    .decks-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        font-family: 'Inter', sans-serif;
+    }
+    
+    .decks-item{
+        position: relative;
+    }
+    
+    .decks-title{
+        position: absolute;
+        bottom: 0;
+        color: white;
+        background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
+        width: 100%;
+        margin: 0;
+        padding:10px;
+        font-family: 'Inter', sans-serif;
+    }
+
+
 
 
