--- a/scss/_placard.scss
+++ b/scss/_placard.scss
@@ -6,42 +6,75 @@
         background-color: antiquewhite;
         margin: 0%;
     }
-    .placard-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 150px;
-        padding: 20px;
-        grid-gap: 10px;
-        font-family: 'Inter', sans-serif;
-        .placard-img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            
-        }
-        
-        .placard-item{
-            position: relative;
-        }
-        .placard-item:nth-child(1){
-            grid-row-start:span 2;
-        
-        }
-        
-        
-        .placard-item:nth-child(5) {
-            grid-row-start:span 2 ;
-        }
-        .placard-title{
-            position: absolute;
-            bottom: 0;
-            color: white;
-            background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
-            width: 100%;
-            margin: 0;
-            padding:10px;
-        }
-    }
+    
+
+
+}
+.placard-container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    padding: 20px;
+    grid-gap: 10px;
+
+   
+
+
+
+}
+
+
+.placard-item{
+    position: relative;
+}
+
+.placard-title{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
+    width: 100%;
+    margin: 0;
+    padding:10px;
+}
+
+.vicente{
+    grid-column-start: span 2;
+}
+.sanlu{
+    grid-row-start: span 1;
+}
+.santos{
+    grid-row-end: span 2;
+    grid-column-end:span 2 ;
+}
+.soho{
+    grid-column-end: span 2;
+}
+.placard-item{
+    position: relative;
+}
+
+.placard-title{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
+    width: 100%;
+    margin: 0;
+    padding:10px;
+}
+.placard-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    font-family: 'Inter', sans-serif;
+    
 }
 
 
