--- a/scss/_promociones.scss
+++ b/scss/_promociones.scss
@@ -2,3 +2,14 @@
     display: flex;
     justify-content: center;
 }
+.calesita{
+    width: 100%;
+    max-width: 100%;
+    height: 350px;
+    max-height:350px ;
+
+}
+.pics{
+    
+    object-fit: cover;
+}
