--- a/scss/_vanitory.scss
+++ b/scss/_vanitory.scss
@@ -6,45 +6,68 @@
         background-color: antiquewhite;
         margin: 0%;
     }
-    .vanitory-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 150px;
-        padding: 20px;
-        grid-gap: 10px;
-        font-family: 'Inter', sans-serif;
-        .vanitory-img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            
-        }
-        
-        .vanitory-item{
-            position: relative;
-        }
-        .vanitory-item:nth-child(1){
-            grid-row-start:span 2;
-        
-        }
-        
-        
-        .vanitory-item:nth-child(5) {
-            grid-row-start:span 2 ;
-        }
-        .vanitory-title{
-            position: absolute;
-            bottom: 0;
-            color: white;
-            background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
-            width: 100%;
-            margin: 0;
-            padding:10px ;
-        
-        }
-        
-    }
+    
 }
+.vanitory-container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    padding: 20px;
+    grid-gap: 10px;
+    font-family: 'Inter', sans-serif;
+    }
+    .juanuno{
+        grid-column-start: span 3;
+    }
+    .juandos{
+        grid-column-end: span 2;
+    }
+    
+    .diaz{
+        grid-column-end: span 2;
+    }
+    .flouno{
+        grid-column-start: span 3;
+    }
+    .flodos{
+        grid-column-start: span 2;
+    }
+    .flotres{
+        grid-row-end: span 2;
+    }
+    .flocuatro{
+        grid-column-start: span 2;
+    }
+
+    
+    
+    .vanitory-item{
+        position: relative;
+    }
+   
+    .vanitory-title{
+        position: absolute;
+        bottom: 0;
+        color: white;
+        background:linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)); 
+        width: 100%;
+        margin: 0;
+        padding:10px ;
+        font-family: 'Inter', sans-serif;
+    
+    }
+    .vanitory-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        font-family: 'Inter', sans-serif;
+    }
+    
 
 
 
