--- a/scss/_decks.scss
+++ b/scss/_decks.scss
@@ -3,7 +3,8 @@
     .titulodecks{
         text-align: center;
         font-family:'Inter', sans-serif ;
-        background-color: antiquewhite;
+        background-color: grey;
+        opacity: 0.6;
         margin: 0%;
     }
     
