--- a/scss/_cocina.scss
+++ b/scss/_cocina.scss
@@ -5,7 +5,8 @@
 .titulococina{
     text-align: center;
     font-family:'Inter', sans-serif ;
-    background-color: antiquewhite;
+    background-color: grey;
+    opacity: 0.6;
     margin: 0%;
 }
 
