--- a/scss/_placard.scss
+++ b/scss/_placard.scss
@@ -3,7 +3,9 @@
     .tituloplacard{
         text-align: center;
         font-family:'Inter', sans-serif ;
-        background-color: antiquewhite;
+        color: black;
+        background-color: grey;
+        opacity: 0.6;
         margin: 0%;
     }
     
