pf-gutierrez juan

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,8 +124,13 @@ ol {
   font-family: "Inter", sans-serif;
 }
 
+.formu {
+  padding: 30px;
+}
+
 .tituloproductos {
-  background-color: rgb(255, 236, 236);
+  background-color: grey;
+  opacity: 0.6;
   font-family: "Inter", sans-serif;
 }
 
