--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,7 +1,8 @@
 
 
 .tituloproductos{
-    background-color: rgb(255, 236, 236);
+    background-color: grey;
+    opacity: 0.6;
     font-family:'Inter', sans-serif ;
 }
 .reforma{
