--- a/css/estilos.css
+++ b/css/estilos.css
@@ -810,4 +810,16 @@ ol {
   background-color: rgb(214, 189, 189);
 }
 
+.jugando {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  font-style: italic;
+  background-color: lightgray;
+}
+
+#decorado {
+  border: 1px solid black;
+}
+
 /*# sourceMappingURL=estilos.css.map */
